# britishcycling-clubs

./: .gitignore  CHANGELOG.md  README.md  config_dist.ini  example.py  example_club_profile_info.py  example_manager_member_counts.py  example_private_member_counts.py  example_profile_info.py  example_public_club_info.py  example_public_member_counts.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-poetry-package.yml
britishcycling_clubs/: __init__.py  main.py  manager.py  manager_info.py  profile.py  profile_.py  profile_info.py
tests/: __init__.py  test_functions.py  test_imports.py  test_manager.py  test_profile.py
