[tool.poetry]
name = "britishcycling-clubs"
version = "0.2.0"
description = "Unofficial library to automate aspects of British/Scottish/Welsh Cycling's club Membership Manager system"
authors = ["elliot-100 <3186037+elliot-100@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://https://github.com/elliot-100/britishcycling-clubs"
repository = "https://https://github.com/elliot-100/britishcycling-clubs"
packages = [{include = "britishcycling_clubs"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
selenium = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
types-requests = "^2.28.11.7"
types-beautifulsoup4 = "^4.11.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
strict = true
disallow_untyped_calls = false  # calls to selenium