[tool.poetry]
name = "britishcycling-clubs"
version = "0.12.0"
description = "Unofficial library to automate aspects of British/Scottish/Welsh Cycling's club Membership Manager system"
authors = ["elliot-100 <3186037+elliot-100@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/elliot-100/britishcycling-clubs"
repository = "https://github.com/elliot-100/britishcycling-clubs"
packages = [{include = "britishcycling_clubs"}]
include = ["CHANGELOG.md"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9"
beautifulsoup4 = ">=4.12.2"
requests = ">=2.23.1"
playwright = ">=1.39.0"

[tool.poetry.group.dev.dependencies]
ruff = "~0.9.5"

[tool.poetry.group.test.dependencies]
mypy = "~1.14.1"
pytest = "~8.3.4"
types-requests = ">=2.23"  # match `requests` requirement
types-beautifulsoup4 = ">=4.12"  # match `beautifulsoup4` requirement

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "playwright"
disallow_untyped_calls = false

[tool.ruff]
target-version = "py39"  # Ruff doesn't respect Python version in [tool.poetry.dependencies]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # Rules that conflict with Ruff formatter:
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals on one line
    # Other:
    "RUF022",  # `__all__` is not sorted
    ]

[tool.ruff.lint.per-file-ignores]
# Rules that aren't relevant/useful in tests:
"**/{tests}/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of assert detected
    ]
# Rules that aren't relevant/useful in example scripts:
"example*.py" = [
    "T203",  # T203 `pprint` found
    ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
