[metadata]
name = britishcycling-clubs
version = 0.0.1
description = Unofficial library to automate aspects of British/Scottish/Welsh Cycling's club Membership Manager system
url = https://https://github.com/elliot-100/britishcycling-clubs
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM

[options]
install_requires = selenium<4